@@ -42,6 +42,7 @@
  * #1752 (Error while estimating the reduced log-likelihood when using a StationaryFunctionalCovarianceModel)
  * #1759 (Kriging model with StationaryFunctionalCovarianceModel might provide bad results)
  * #1768 (Bug in ExponentiallyDampedCosineModel & SphericalModel)
+ * #1771 (GridLayout hides the titles in the graph)
 
 
 == 1.16 release (2020-11-16) == #release-1.16
